--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,33 +7,32 @@
         mc:Ignorable="d"
         Title="Filmy" Height="450" Width="800">
     <Grid>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <ListBox Grid.Row="0" Name="MovieList" Padding="5" SelectionChanged="ChangeElement"/>
+        <ListBox Grid.Row="0" Name="MovieList" Padding="5" SelectionChanged="ChangeElement" />
 
 
-        <Grid Grid.Row="1" >
+        <Grid Grid.Row="1">
 
             <Grid.ColumnDefinitions>
+
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
+
             </Grid.ColumnDefinitions>
-           
-            
+
             <Button Grid.Column="0" Padding="10,5" Margin="20" Click="AddMovie">Dodaj</Button>
-            <Button Grid.Column="1" Padding="10,5" Margin="20" Click="EditMovie">Edytuj</Button>
-            <Button Grid.Column="2" Padding="10,5" Margin="20" Click="PreviewMovie">Podgląd</Button>
-            <Button Grid.Column="3" Padding="10,5" Margin="20" Click="RemoveMovie">Usuń</Button>
-            
+            <Button Grid.Column="1" Padding="10,5" Margin="20" Name="EditButton" Click="EditMovie">Edytuj</Button>
+            <Button Grid.Column="2" Padding="10,5" Margin="20" Name="PreviewButton" Click="PreviewMovie">Podgląd</Button>
+            <Button Grid.Column="3" Padding="10,5" Margin="20" Name="DeleteButton" Click="RemoveMovie">Usuń</Button>
 
         </Grid>
-
-        
         
     </Grid>
 </Window>
